ENTREGA_P3_SEMANTICO/P3_MARCO_GARCIA_PABLO_ROIG/tests/invalid/18_invalid_boolean_arithmetic.lava
int value = true + 1;
